--- a/tests/tests.css
+++ b/tests/tests.css
@@ -141,6 +141,7 @@ body {
                 align-items: center;
                 overflow-y: auto;
                 margin-top: 10px;
+                min-height: 10px;
 
                 .card {
                     width: 90%;
@@ -174,6 +175,10 @@ body {
                             opacity: 1;
                             transform: translate(0);
                         }
+                    }
+
+                    &cardOver {
+                        animation: shake 0.5s;
                     }
 
                 }
@@ -219,10 +224,55 @@ body {
             }
         }
     }
+
+    .over {
+        transform: scale(1.04);
+        z-index: 1;
+        box-shadow: 0 0 10px 5px #8100ff;
+    }
+
+    .cardOver {
+        border: 2px solid #8100ff!important;
+        border-radius: 10px;
+    }
+
 }
 
-.over {
-    transform: scale(1.04);
-    z-index: 1;
-    box-shadow: 0 0 10px 5px #8100ff;
+
+
+/*animation de tremblement comme les IPhone */
+@keyframes shake {
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+    10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
+    20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
+    30% {
+        transform: translate(3px, 2px) rotate(0deg);
+    }
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
+    50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+    60% {
+        transform: translate(-3px, 1px) rotate(0deg);
+    }
+    70% {
+        transform: translate(3px, 1px) rotate(-1deg);
+    }
+    80% {
+        transform: translate(-1px, -1px) rotate(1deg);
+    }
+    90% {
+        transform: translate(1px, 2px) rotate(0deg);
+    }
+    100% {
+        transform: translate(1px, -2px) rotate(-1deg);
+    }
 }
