--- a/tests/tests.css
+++ b/tests/tests.css
@@ -228,6 +228,41 @@ body {
                     border-radius: 5px;
                 }
 
+                .ajoutSystem {
+                    color: white;
+                    width: 98%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    align-items: center;
+
+                    input {
+                        width: 95%;
+                        height: 25px;
+                        border-radius: 5px;
+                        border: 2px solid #8100ff;
+                        margin-bottom: 10px;
+                    }
+
+                    .ajoutCarte {
+                        width: 50%;
+                        height: 28px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        color: white;
+                        background-color: #8100ff;
+                        border-radius: 5px;
+                        transition: background-color 200ms ease-in-out;
+                        cursor: pointer;
+                    }
+
+                    .ajoutCarte:hover {
+                        background-color: #aa51ff;
+                    }
+
+                }
+
                 &::-webkit-scrollbar {
                     width: 7px;
                     background-color: #282828;
@@ -247,17 +282,17 @@ body {
                 justify-content: flex-start;
                 align-items: center;
                 color: white;
-                font-size: 16px;
+                font-size: 13px;
                 font-weight: normal;
                 padding-left: 10px;
                 cursor: pointer;
                 transition: background-color 200ms;
                 border-radius: 10px;
-                max-height: 35px;
+                max-height: 30px;
                 margin-top: 5px;
 
                 img {
-                    height: 20px;
+                    height: 16px;
                     margin-right: 10px;
                 }
             }
