feat : ajout de doc, corrections de bugs... Ajout des cartes (via formulaire) et colonnes OK

--- a/tests/tests.css
+++ b/tests/tests.css
@@ -446,6 +446,9 @@ body {
             background-color: #23272b;
             color: white;
             transition: background-color 200ms ease-in-out;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
 
         }
 
