--- a/tests/tests.css
+++ b/tests/tests.css
@@ -148,6 +148,7 @@ body {
                     padding-left: 3px;
                     padding-right: 3px;
                     transition: background-color 0.2s ease-in-out;
+                    position: relative;
 
                     img {
                         width: 90%;
@@ -228,40 +229,6 @@ body {
                     border-radius: 5px;
                 }
 
-                .ajoutSystem {
-                    color: white;
-                    width: 98%;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: flex-start;
-                    align-items: center;
-
-                    input {
-                        width: 95%;
-                        height: 25px;
-                        border-radius: 5px;
-                        border: 2px solid #8100ff;
-                        margin-bottom: 10px;
-                    }
-
-                    .ajoutCarte {
-                        width: 50%;
-                        height: 28px;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        color: white;
-                        background-color: #8100ff;
-                        border-radius: 5px;
-                        transition: background-color 200ms ease-in-out;
-                        cursor: pointer;
-                    }
-
-                    .ajoutCarte:hover {
-                        background-color: #aa51ff;
-                    }
-
-                }
 
                 &::-webkit-scrollbar {
                     width: 7px;
@@ -458,7 +425,7 @@ body {
             font-weight: 510;
         }
 
-        *&:focus {
+        * &:focus {
             background-color: white;
             color: black;
         }
@@ -486,4 +453,51 @@ body {
 
     }
 
+}
+
+.menuColonnes {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 200px;
+    min-height: 110px;
+    background-color: #292e33;
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 2;
+    border-radius: 10px;
+    color: white;
+
+    .close {
+        position: relative;
+        width: 15px;
+        height: 15px;
+        left: 80px;
+        top: 10px;
+        cursor: pointer;
+        margin-bottom: 10px;
+    }
+
+    div {
+        width: 90%;
+        height: 30px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        cursor: pointer;
+        transition: background-color 200ms ease-in-out;
+        border-radius: 5px;
+        padding: 1%;
+
+        img {
+            width: 20px;
+            margin-left: 10px;
+        }
+    }
+
+    div:hover {
+        background-color: #3e474f;
+    }
 }
