--- a/tests/tests.css
+++ b/tests/tests.css
@@ -227,6 +227,7 @@ body {
                     width: 40px;
                     border: 5px solid #ff55c4;
                     border-radius: 5px;
+                    margin-bottom: 5px;
                 }
 
 
