--- a/tests/tests.css
+++ b/tests/tests.css
@@ -461,7 +461,7 @@ body {
     top: 0;
     left: 0;
     width: 200px;
-    min-height: 110px;
+    min-height: 130px;
     background-color: #292e33;
     display: none;
     flex-direction: column;
@@ -478,11 +478,11 @@ body {
         left: 80px;
         top: 10px;
         cursor: pointer;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
     }
 
     div {
-        width: 90%;
+        width: 80%;
         height: 30px;
         display: flex;
         justify-content: space-between;
@@ -490,7 +490,8 @@ body {
         cursor: pointer;
         transition: background-color 200ms ease-in-out;
         border-radius: 5px;
-        padding: 1%;
+        padding: 1% 10px 1% 10px;
+        margin-bottom: 5px;
 
         img {
             width: 20px;
@@ -501,4 +502,120 @@ body {
     div:hover {
         background-color: #3e474f;
     }
+}
+
+/*
+<div class="formulaireModificationColonne">' +
+        '<div class="wrap"><h2>Modification de la colonne</h2><img class="closeColumn" src="close.png" alt=""></div>' +
+        '<div class="content"><h4>Nouveau titre :</h4><input maxlength="50" required type="text" class="inputModificationColonne" placeholder="Entrez le nouveau titre"></div>' +
+        '<div class="boutonModification">Modifier</div>' +
+        '</div>';
+ */
+
+
+.formulaireModificationColonne {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    min-height: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #101204;
+    z-index: 5;
+    padding: 1%;
+    border-radius: 10px;
+    color: white;
+    overflow-y: auto;
+    overflow-x: hidden;
+
+    &::-webkit-scrollbar {
+        width: 7px;
+        background-color: #282828;
+        border-radius: 5px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: #8100ff;
+        border-radius: 5px;
+    }
+
+    .wrap {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        padding: 1%;
+
+        h2 {
+            width: 95%;
+            padding-left: 20px;
+            text-align: center;
+        }
+
+        img {
+            width: 20px;
+            cursor: pointer;
+        }
+    }
+
+    .content {
+
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        margin-bottom: 10px;
+
+        h4 {
+            margin-bottom: 10px;
+        }
+
+        input {
+            width: 100%;
+            height: 30px;
+            border-radius: 5px;
+            border: 2px solid #8100ff;
+            padding-left: 10px;
+            background-color: #23272b;
+            color: white;
+            transition: background-color 200ms ease-in-out;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+
+        }
+
+        input:focus {
+            background-color: white;
+            color: black;
+        }
+
+    }
+
+    .boutonModification {
+        width: 50%;
+        height: 28px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        background-color: #8100ff;
+        border-radius: 5px;
+        transition: all 200ms ease-in-out;
+        cursor: pointer;
+        border: 2px solid transparent;
+    }
+
+    .boutonModification:hover {
+        background-color: white;
+        color: black;
+        border: 2px solid #8100ff;
+
+    }
+
 }
