--- a/tests/tests.css
+++ b/tests/tests.css
@@ -426,7 +426,7 @@ body {
             font-weight: 510;
         }
 
-        * &:focus {
+        input:focus, textarea:focus {
             background-color: white;
             color: black;
         }
