--- a/tests/tests.css
+++ b/tests/tests.css
@@ -192,6 +192,12 @@ body {
                     cursor: pointer;
                     line-height: 1.5em;
 
+                    .color {
+                        width: 40px;
+                        border: 5px solid #ff55c4;
+                        border-radius: 5px;
+                        margin-bottom: 5px;
+                    }
 
                     &:after {
                         cursor: pointer;
@@ -211,8 +217,27 @@ body {
                         width: 98%;
                         display: flex;
                         justify-content: flex-end;
+                        flex-wrap: wrap;
+                        align-items: center;
                         min-height: 5px;
+
+                        .user {
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+
+                            width: 25px;
+                            height: 25px;
+                            border-radius: 50%;
+                            color: white;
+                            background-color: red;
+                            margin-bottom: 10px;
+                            margin-right: 5px;
+                        }
+
                     }
+
+
 
 
                 }
@@ -221,12 +246,6 @@ body {
                     border: 2px solid #4792ff;
                 }
 
-                span {
-                    width: 40px;
-                    border: 5px solid #ff55c4;
-                    border-radius: 5px;
-                    margin-bottom: 5px;
-                }
 
 
                 &::-webkit-scrollbar {
