--- a/tests/tests.css
+++ b/tests/tests.css
@@ -29,6 +29,46 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
+
+        .infos {
+            width: 98%;
+            min-height: 50px;
+            background-color: #101204;
+            border-radius: 10px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1%;
+            margin-bottom: 10px;
+            color: white;
+
+            .allUsers {
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-end;
+                align-items: center;
+                align-content: center;
+                flex-wrap: wrap;
+                min-width: 100px;
+                height: 100%;
+                max-width: 30%;
+
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+
+                h4 {
+                    margin-right: 10px;
+                }
+
+                .user {
+                    margin-bottom: 0;
+                }
+
+            }
+        }
+
     }
 
     h1 {
@@ -220,21 +260,6 @@ body {
                         flex-wrap: wrap;
                         align-items: center;
                         min-height: 5px;
-
-                        .user {
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-
-                            width: 25px;
-                            height: 25px;
-                            border-radius: 50%;
-                            color: white;
-                            background-color: red;
-                            margin-bottom: 10px;
-                            margin-right: 5px;
-                        }
-
                     }
 
 
@@ -319,6 +344,20 @@ body {
         background-color: #23272b;
     }
 
+}
+
+.user {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    color: white;
+    background-color: red;
+    margin-bottom: 10px;
+    margin-right: 5px;
 }
 
 
