--- a/tests/tests.css
+++ b/tests/tests.css
@@ -430,7 +430,7 @@ body {
     transform: translate(-50%, -50%);
     width: 500px;
     height: 90%;
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
