--- a/src/vue/base.html.twig
+++ b/src/vue/base.html.twig
@@ -50,8 +50,9 @@
         </ul>
     </nav>
     <div>
+
         {% for type in ['success','info', 'warning', 'danger'] %}
-            {% for messageFlash in messageFlash.lireMessages(type) %}
+            {% for messageFlash in messagesFlash.lireMessages(type) %}
             <div class="alert alert-{{ type }}">{{ messageFlash }}</div>
             {% endfor %}
         {% endfor %}
