--- a/src/vue/base/accueil.html.twig
+++ b/src/vue/base/accueil.html.twig
@@ -1,4 +1,3 @@
-<!-- BESOIN DE : idUtilisateurConnecter-->
 
 {% extends "base.html.twig" %}
 
@@ -8,12 +7,12 @@
     <div><p>Bienvenue sur <strong>Trello-Trollé</strong>!</p></div>
     <div>
         {% if idUtilisateurConnecte is not null %}
-        <span><a href="controleurFrontal.php?action=afficherListeMesTableaux&controleur=tableau">Consulter mes tableaux</a></span>
+        <span><a href="{{ route('afficherListeMesTableaux') }}">Consulter mes tableaux</a></span>
         {% else %}
         <p>
             Pour créer des tableaux, commencez par vous
-            <a href="controleurFrontal.php?action=afficherFormulaireConnexion&controleur=utilisateur">connecter</a>
-            ou par <a href="controleurFrontal.php?action=afficherFormulaireCreation&controleur=utilisateur">créer un
+            <a href="{{ route('afficherFormulaireConnexion') }}">connecter</a>
+            ou par <a href="{{ route('afficherFormulaireCreation') }}">créer un
                 compte</a>!
         </p>
         {% endif %}
