--- a/src/vue/colonne/formulaireMiseAJourColonne.html.twig
+++ b/src/vue/colonne/formulaireMiseAJourColonne.html.twig
@@ -5,15 +5,13 @@
 
 {% block page_content %}
     <div>
-        <form method="post" action="controleurFrontal.php">
+        <form method="post" action="{{ route('mettreAJourColonne') }}">
             <fieldset>
                 <h3>Modification d'une colonne :</h3>
                 <p>
                     <label for="nomColonne">Nom de la colonne&#42;</label> :
                     <input type="text" placeholder="KO" name="nomColonne" id="nomColonne" minlength="1" maxlength="50" value='{{ nomColonne }}' required>
                 </p>
-                <input type='hidden' name='idColonne' value='{{ idColonne }}'>
-                <input type='hidden' name='action' value='mettreAJourColonne'>
                 <input type='hidden' name='controleur' value='colonne'>
                 <p>
                     <input type="submit" value="Modifier la colonne">
