--- a/src/vue/tableau/formulaireAjoutMembreTableau.html.twig
+++ b/src/vue/tableau/formulaireAjoutMembreTableau.html.twig
@@ -5,7 +5,7 @@
 
 {% block page_content %}
     <div>
-        <form method="post" action="controleurFrontal.php">
+        <form method="post" action="{{ route('ajouterMembreTableau') }}">
             <fieldset>
                 <h3>Ajout d'un membre au tableau <?= $tableau->getTitreTableau() ?>:</h3>
                 <p>
@@ -16,8 +16,6 @@
                         {% endfor %}
                     </select>
                 </p>
-                <input type='hidden' name='idTableau' value='{{ tableau.idTableau }}'>
-                <input type='hidden' name='action' value='ajouterMembre'>
                 <input type='hidden' name='controleur' value='tableau'>
                 <p>
                     <input type="submit" value="Ajouter">
