--- a/src/vue/tableau/formulaireMiseAJourTableau.html.twig
+++ b/src/vue/tableau/formulaireMiseAJourTableau.html.twig
@@ -5,15 +5,13 @@
 
 {% block page_content %}
     <div>
-        <form method="post" action="controleurFrontal.php">
+        <form method="post" action="{{ route('mettreAJourTableau') }}">
             <fieldset>
                 <h3>Modification d'un tableau :</h3>
                 <p>
                     <label for="nomTableau">Nom du tableau&#42;</label> :
                     <input type="text" placeholder="Mon super tableau" name="nomTableau" id="nomTableau" minlength="3" maxlength="50" value='{{ nomTableau }}' required>
                 </p>
-                <input type='hidden' name='idTableau' value='{{ idTableau }}'>
-                <input type='hidden' name='action' value='mettreAJourTableau'>
                 <input type='hidden' name='controleur' value='tableau'>
                 <p>
                     <input type="submit" value="Modifier le tableau">
