--- a/src/vue/utilisateur/formulaireConnexion.html.twig
+++ b/src/vue/utilisateur/formulaireConnexion.html.twig
@@ -4,7 +4,7 @@
 
 {% block page_content %}
     <div>
-        <form method="post" action="controleurFrontal.php">
+        <form method="post" action="{{ route('connecter') }}">
             <fieldset>
                 <h3>Connexion</h3>
                 <p >
@@ -15,9 +15,8 @@
                     <label  for="mdp_id">Mot de passe</label>
                     <input  type="password" value="" placeholder="" name="mdp" id="mdp_id" required>
                 </p>
-                <a href="controleurFrontal.php?action=afficherFormulaireRecuperationCompte&controleur=utilisateur">Login et/ou mot de passe oubliés ?</a>
-                <input type='hidden' name='action' value='connecter'>
-                <input type='hidden' name='controleur' value='utilisateur'>
+                <a href="{{ route('utilisateurResetCompte') }}">Login et/ou mot de passe oubliés ?</a>
+
                 <p>
                     <input  type="submit" value="Se connecter"/>
                 </p>
