--- a/src/vue/utilisateur/detail.html.twig
+++ b/src/vue/utilisateur/detail.html.twig
@@ -7,16 +7,16 @@
     <p>
 
     <form>
-        <h3>Détail du compte $loginHTML</h3>
+        <h3>Détail du compte {{ utilisateur.login }}</h3>
         <p>
 
             <label for="">Nom</label>
             <input type="text" disabled value="{{ utilisateur.nom }}">
             <label for="">Prénom</label>
-            <input type="text" disabled value="{{ utilisteur.prenom }}">
+            <input type="text" disabled value="{{ utilisateur.prenom }}">
         </p>
 
-    {% if idUtilsateurConnecte %}
+    {% if idUtilsateurConnecte == utilisateur.login %}
     <div class="btn btn_maj"><a href="{{ route('afficherFormulaireMiseAJourUtilisateur',{"login" : idUtilisateurConnecte}) }}">Mettre
             à jour le compte</a></div>
     <div class="btn btn_suppr"><a href="{{ route('supprimer',{"login" : idUtilisateurConnecte}) }}">Supprimer le compte</a></div>
