fix : corrections bug inscription

--- a/src/vue/utilisateur/formulaireCreation.html.twig
+++ b/src/vue/utilisateur/formulaireCreation.html.twig
@@ -4,7 +4,7 @@
 
 {% block page_content %}
     <<div>
-    <form method="post" action="controleurFrontal.php">
+    <form method="post" action="{{ route("creerDepuisFormulaire") }}">
         <fieldset>
             <h3>Inscription</h3>
             <p >
